name:             quickcheck-io
version:          0.1.0
synopsis:         Use HUnit assertions as QuickCheck properties
description:      This package provides an orphan instance that allows you to
                  use HUnit assertions as QuickCheck properties.
license:          MIT
license-file:     LICENSE
copyright:        (c) 2013 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Test.QuickCheck.IO
  build-depends:
      QuickCheck  >= 2.5.1
    , HUnit       >= 1.2.5
    , base        == 4.*
